2014-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_svg.js term/svg.trm:
	Grey out key entries when corresponding plot is toggled off.

	* src/qtterminal/QtGnuplotItems.* src/qtterminal/QtGnuplotScene.cpp:
	Grey out key entries when corresponding plot is toggled off.

	* src/wxterminal/wxt_gui.cpp (wxt_grey_out_key_box):
	Grey out key entries when corresponding plot is toggled off.

2014-05-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput):  Do not wait for an
	event when only checking for mouse events.
	Bugfix

2014-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/boundary.c:  A width adjustment for the length of the key title
	was being applied to every column of entries in the key instead of just
	once for the whole key.  Apply the "set key {no}enhanced" property to
	the key title as well as to the individual plot titles.
	Bugfix

2014-05-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.h: Apparently wxWidgets3 (wxgtk3) threads call
	into Xlib but fail to initialize X threading before doing so. Therefore
	we must call XInitThreads before forking wxt threads.
	Bug #1401

2014-05-19  Karl Ratzsch  <kf2402@users.sf.net>

	* term/emf.trm: Add point types pentagon (14) and filled pentagon (15)

2014-05-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (load_linetype):  As documented, "set linetype cycle N"
	should only affect line properties (color, width, dash), not point
	properties (type, interval, size).  This got lost somewhere, which 
	meant point types > linetype_recycle_count were never used by default.
	Now they are.  This means that, as intended, 'with linespoints' cycles
	through (linetype_recycle_count * terminal's_max_point_type) distinct
	combinations before repeating so long as those two numbers are
	mutually prime.  Unfortunately that's not guaranteed and is terminal-
	dependent.  We really need a "set pointtype cycle M" command also so